# fmnl

./: Cargo.toml  PKGBUILD  README.md  pushpkg.sh
src/: main.rs
